# DegreeMapper-AI

./: .dockerignore  .gitignore  app.py  dockerfile  justfile  main.py  pyproject.toml
agents/: __init__.py  common.py  enums.py  graph.py  lg_react.py  nodes.py  openai_react.py  prompts.py  reducer.py  tools.py  types.py  utils.py
database/: __init__.py  chromadb.py  enums.py  mongodb.py  types.py  utils.py
llm/: __init__.py  deepseek.py  enums.py  huggingface.py  openai.py
tools/: __init__.py
